--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "spatie/laravel-analytics": "^3.11"
     },
     "require-dev": {
-        "barryvdh/laravel-ide-helper": "^2.11",
+        "barryvdh/laravel-ide-helper": "^2.12",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
@@ -29,12 +29,14 @@
         "phpunit/phpunit": "^9.5.10"
     },
     "autoload": {
+        "files": [
+            "app/helpers.php"
+        ],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        },
-        "files": ["app/Http/Helpers.php"]
+        }
     },
     "autoload-dev": {
         "psr-4": {
@@ -58,11 +60,11 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": [
-                "barryvdh/laravel-ide-helper"
-            ]
+          "dont-discover": [
+            "barryvdh/laravel-ide-helper"
+          ]
         }
-    },
+      },
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
